--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,6 @@
 @import "tables.css";
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: "proxima nova black", "proxima nova", sans-serif;
+    font-family: "proxima nova", sans-serif;
     color: #0171bc;
 }
