--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -59,10 +59,10 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.js"></script>
   <script type="text/javascript">
     algoliasearchNetlify({
-      appId: '1OBAK0C00M',
-      apiKey: '804bb6eea7fa0b71dce2bbc4055afc0a',
-      siteId: '5cc89e3e-70b1-4f4f-a608-6a38c7882b43',
-      branch: 'master',
+      appId: '',
+      apiKey: '',
+      siteId: '',
+      branch: 'main',
       selector: 'div#search',
     });
   </script>
