--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -59,9 +59,9 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.js"></script>
   <script type="text/javascript">
     algoliasearchNetlify({
-      appId: '',
-      apiKey: '',
-      siteId: '',
+      appId: 'Y46VPHWIO9',
+      apiKey: 'e2d2b67508d8f1b99d4444943029c753',
+      siteId: '4c7dba9e-b76d-4f5f-9e0c-8accb00668b0',
       branch: 'main',
       selector: 'div#search',
     });
